<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearFrase">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="399dp"
        android:layout_height="75dp"
        android:src="@drawable/logod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/etxtUno"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/bienvenido"
        android:textSize="20sp"
        android:src="@drawable/estiloevento"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/txdos"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/categora"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtUno"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/etxtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/categoria"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/mensaje"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/etxtMensaje"
        android:layout_width="296dp"
        android:layout_height="98dp"
        android:hint="@string/mensaje3"
        android:textSize="20sp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="188dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/azul"
        android:text="Agregar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:backgroundTint="#66CAFF"
        android:text="Listar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681"
        android:visibility="gone"
        />


   <!-- <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btn_nav"
        android:layout_width="390dp"
        android:layout_height="54dp"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/palmera"
        android:layout_width="204dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/mensajee" />

</androidx.constraintlayout.widget.ConstraintLayout>